--- a/makefile.bcc
+++ b/makefile.bcc
@@ -9,14 +9,15 @@ CFLAGS = -w- -d -k- -O2
 
 ############################################################################
 
-id3.exe: main.obj sedit.obj varexp.obj fileexp.obj charconv.obj mass_tag.obj pattern.obj \
-         setid3.obj setid3v2.obj setlyr3.obj setfname.obj setquery.obj \
-         getid3.obj getid3v2.obj getlyr3.obj \
-         id3v1.obj id3v2.obj fileops.obj lyrics3.obj char_ucs.obj
+id3.exe: main.obj varexp.obj fileexp.obj sedit.obj mass_tag.obj pattern.obj \
+	 setid3.obj getid3.obj id3v1.obj \
+	 setid3v2.obj getid3v2.obj id3v2.obj fileops.obj \
+	 setlyr3.obj getlyr3.obj lyrics3.obj \
+	 setfname.obj setquery.obj charconv.obj char_ucs.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
 id3l.exe: mainl.obj sedit.obj varexp.obj fileexp.obj charconv.obj mass_tag.obj pattern.obj \
-         setid3.obj setfname.obj setquery.obj \
+	 setid3.obj setfname.obj setquery.obj \
 	 getid3.obj \
 	 id3v1.obj
 	$(CC) $(CFLAGS) -e$@ $**
