--- a/FreeBSD/Makefile
+++ b/FreeBSD/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	id3mtag
-# Date created:				9 February 2005
-# Whom:					squell@alumina.nl
-#
+# Created by: squell@alumina.nl
 # $FreeBSD$
-#
 
 PORTNAME=	id3mtag
 PORTVERSION=	0.78
@@ -14,25 +10,24 @@ DISTNAME=	id3-${PORTVERSION}
 MAINTAINER=	squell@alumina.nl
 COMMENT=	Mass tagging utility for audio files
 
-MAN1=		id3.1
-PLIST_FILES=	bin/id3
+LICENSE=	BSD2CLAUSE
 
 MAKEFILE=	makefile
 ALL_TARGET=	build
-MAKE_ARGS=	CC=${CC} CFLAGS="${CFLAGS}" \
-		CXX=${CXX} CXXFLAGS="${CXXFLAGS}"
+MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}" \
+		CXX="${CXX}" CXXFLAGS="${CXXFLAGS}"
 
-PORTDOCS=	*
+PLIST_FILES=	bin/id3 man/man1/id3.1.gz
+PORTDOCS=	README CHANGES
+
+OPTIONS_DEFINE=	DOCS
 
 do-install:
-	${MKDIR} ${PREFIX}/bin ${MANPREFIX}/man/man1
-	${INSTALL_PROGRAM} ${WRKSRC}/id3 ${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/id3.man ${MANPREFIX}/man/man1/id3.1
-.	if !defined(NOPORTDOCS)
-		${MKDIR} ${DOCSDIR}
-		${INSTALL_DATA} ${WRKSRC}/README  ${DOCSDIR}
-		${INSTALL_DATA} ${WRKSRC}/CHANGES ${DOCSDIR}
-		${INSTALL_DATA} ${WRKSRC}/COPYING ${DOCSDIR}
-.	endif
+	${INSTALL_PROGRAM} ${WRKSRC}/id3 ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/id3.man ${STAGEDIR}${MANPREFIX}/man/man1/id3.1
+	${MKDIR} ${STAGEDIR}${DOCSDIR}
+.for f in ${PORTDOCS}
+	${INSTALL_DATA} ${WRKSRC}/${f} ${STAGEDIR}${DOCSDIR}
+.endfor
 
 .include <bsd.port.mk>
