--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,10 @@
 Source: id3mtag
-Section: devel
+Section: sound
 Priority: optional
 Maintainer: Marc R. Schoolderman <squell@alumina.nl>
-Standards-Version: 3.6.1.1
+Standards-Version: 3.9.5
+Homepage: https://squell.github.io/id3
+Vcs-Git: https://github.com/squell/id3.git
 
 Package: id3mtag
 Architecture: any
@@ -15,6 +17,3 @@ Description: mass tagging utility for audio files
  id3 mass tagger is a tool for manipulating id3 and id3v2 tags in multiple
  files. It can generate tag fields from the filename and other variables,
  and/or rename files, using an intuitive syntax.
- .
- http://home.wanadoo.nl/squell/id3.html
-
