--- a/makefile.dj
+++ b/makefile.dj
@@ -1,7 +1,7 @@
 ## id3 makefile for DJGPP v2 ###############################################
 
 CC	= gxx
-CFLAGS	= -g -O2
+CFLAGS	= -g -Os
 LDFLAGS =
 
 ############################################################################
