--- a/makefile.bcc
+++ b/makefile.bcc
@@ -13,7 +13,7 @@ id3.exe: main.obj varexp.obj fileexp.obj sedit.obj mass_tag.obj pattern.obj \
 	 setid3.obj getid3.obj id3v1.obj \
 	 setid3v2.obj getid3v2.obj id3v2.obj fileops.obj \
 	 setlyr3.obj getlyr3.obj lyrics3.obj \
-	 setfname.obj setquery.obj charconv.obj char_ucs.obj
+	 setfname.obj setquery.obj charconv.obj char_ucs.obj char_utf8.obj
 	$(CC) $(CFLAGS) -e$@ $**
 
 id3l.exe: mainl.obj sedit.obj varexp.obj fileexp.obj charconv.obj mass_tag.obj pattern.obj \
