--- a/FreeBSD/Makefile
+++ b/FreeBSD/Makefile
@@ -14,7 +14,7 @@ LICENSE=	BSD2CLAUSE
 
 MAKEFILE=	makefile
 ALL_TARGET=	build
-MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}" \
+MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
 		CXX="${CXX}" CXXFLAGS="${CXXFLAGS}"
 
 PLIST_FILES=	bin/id3 man/man1/id3.1.gz
@@ -22,7 +22,10 @@ PORTDOCS=	README CHANGES
 
 OPTIONS_DEFINE=	DOCS
 
-CFLAGS+=	-Wno-parentheses
+USES=		iconv
+
+CFLAGS+=	-I${LOCALBASE}/include -Wno-parentheses
+LDFLAGS+=	-L${LOCALBASE}/lib ${ICONV_LIB}
 CXXFLAGS+=	-fno-rtti
 
 do-install:
