tweaked build infrastructure + fix copyright year

--- a/FreeBSD/Makefile
+++ b/FreeBSD/Makefile
@@ -11,11 +11,11 @@ MAINTAINER=	squell@alumina.nl
 COMMENT=	Mass tagging utility for audio files
 
 LICENSE=	BSD2CLAUSE
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 MAKEFILE=	makefile
 ALL_TARGET=	build
-MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
-		CXX="${CXX}" CXXFLAGS="${CXXFLAGS}"
+INSTALL_TARGET=	install installdoc package=id3mtag
 
 PLIST_FILES=	bin/id3 man/man1/id3.1.gz
 PORTDOCS=	README CHANGES
@@ -24,16 +24,7 @@ OPTIONS_DEFINE=	DOCS
 
 USES=		iconv
 
-CFLAGS+=	-I${LOCALBASE}/include -Wno-parentheses
+CFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib ${ICONV_LIB}
-CXXFLAGS+=	-fno-rtti
-
-do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/id3 ${STAGEDIR}${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/id3.man ${STAGEDIR}${MANPREFIX}/man/man1/id3.1
-	${MKDIR} ${STAGEDIR}${DOCSDIR}
-.for f in ${PORTDOCS}
-	${INSTALL_DATA} ${WRKSRC}/${f} ${STAGEDIR}${DOCSDIR}
-.endfor
 
 .include <bsd.port.mk>
