--- a/makefile.nmk
+++ b/makefile.nmk
@@ -8,7 +8,8 @@ CFLAGS = /O1 /EHsc /GL /wd4804
 
 ############################################################################
 
-id3.exe: main.obj varexp.obj fileexp.obj sedit.obj mass_tag.obj pattern.obj \
+id3.exe: main.obj varexp.obj fileexp.obj dumptag.obj \
+	 sedit.obj mass_tag.obj pattern.obj \
 	 setid3.obj getid3.obj id3v1.obj \
 	 setid3v2.obj getid3v2.obj id3v2.obj fileops.obj \
 	 setlyr3.obj getlyr3.obj lyrics3.obj \
@@ -36,36 +37,37 @@ main.obj: main.cpp
 
 ############################################################################
 
-main.o: main.cpp setgroup.h set_base.h sedit.h charconv.h setid3.h \
-  setfname.h setquery.h setid3v2.h setlyr3.h mass_tag.h fileexp.h \
-  pattern.h
-sedit.o: sedit.cpp sedit.h charconv.h
-varexp.o: varexp.cpp varexp.h
-fileexp.o: fileexp.cpp varexp.h auto_dir.h fileexp.h
-mass_tag.o: mass_tag.cpp charconv.h sedit.h set_base.h mass_tag.h \
-  fileexp.h
-pattern.o: pattern.cpp set_base.h sedit.h charconv.h mass_tag.h fileexp.h \
-  pattern.h
-charconv.o: charconv.cpp charconv.h
-char_ucs.o: char_ucs.cpp char_ucs.h charconv.h
-char_utf8.o: char_utf8.cpp utf8.h char_utf8.h charconv.h
-lyrics3.o: lyrics3.cpp lyrics3.h
-setid3.o: setid3.cpp id3v1.h getid3.h set_base.h sedit.h charconv.h \
-  setid3.h
-setid3v2.o: setid3v2.cpp char_ucs.h charconv.h id3v1.h id3v2.h fileops.h \
-  getid3v2.h set_base.h sedit.h setid3v2.h
-setlyr3.o: setlyr3.cpp charconv.h lyrics3.h getlyr3.h getid3.h set_base.h \
-  sedit.h id3v1.h setlyr3.h
-setfname.o: setfname.cpp sedit.h charconv.h setfname.h setgroup.h \
-  set_base.h
-setquery.o: setquery.cpp setquery.h set_base.h sedit.h charconv.h
-getid3.o: getid3.cpp getid3.h set_base.h sedit.h charconv.h id3v1.h
-getid3v2.o: getid3v2.cpp char_ucs.h charconv.h char_utf8.h id3v2.h \
-  getid3v2.h set_base.h sedit.h
-getlyr3.o: getlyr3.cpp lyrics3.h getid3.h set_base.h sedit.h charconv.h \
-  id3v1.h getlyr3.h
-fileops.o: fileops.c fileops.h
-id3v1.o: id3v1.c id3v1.h
-id3v2.o: id3v2.c fileops.h id3v2.h
+main.obj: main.cpp setgroup.h set_base.h sedit.h charconv.h setid3.h \
+ setfname.h setquery.h setid3v2.h setlyr3.h mass_tag.h fileexp.h \
+ pattern.h dumptag.h
+sedit.obj: sedit.cpp sedit.h charconv.h
+varexp.obj: varexp.cpp varexp.h
+fileexp.obj: fileexp.cpp varexp.h auto_dir.h fileexp.h
+mass_tag.obj: mass_tag.cpp charconv.h sedit.h set_base.h mass_tag.h \
+ fileexp.h
+pattern.obj: pattern.cpp set_base.h sedit.h charconv.h mass_tag.h fileexp.h \
+ pattern.h
+dumptag.obj: dumptag.cpp dumptag.h set_base.h sedit.h charconv.h setgroup.h
+charconv.obj: charconv.cpp charconv.h
+char_ucs.obj: char_ucs.cpp char_ucs.h charconv.h
+char_utf8.obj: char_utf8.cpp utf8.h char_utf8.h charconv.h
+lyrics3.obj: lyrics3.cpp lyrics3.h
+setid3.obj: setid3.cpp id3v1.h getid3.h set_base.h sedit.h charconv.h \
+ setid3.h
+setid3v2.obj: setid3v2.cpp char_ucs.h charconv.h id3v1.h id3v2.h fileops.h \
+ getid3v2.h set_base.h sedit.h setid3v2.h
+setlyr3.obj: setlyr3.cpp charconv.h lyrics3.h getlyr3.h getid3.h set_base.h \
+ sedit.h id3v1.h setlyr3.h
+setfname.obj: setfname.cpp sedit.h charconv.h setfname.h setgroup.h \
+ set_base.h
+setquery.obj: setquery.cpp setquery.h set_base.h sedit.h charconv.h
+getid3.obj: getid3.cpp getid3.h set_base.h sedit.h charconv.h id3v1.h
+getid3v2.obj: getid3v2.cpp char_ucs.h charconv.h char_utf8.h id3v2.h \
+ getid3v2.h set_base.h sedit.h
+getlyr3.obj: getlyr3.cpp lyrics3.h getid3.h set_base.h sedit.h charconv.h \
+ id3v1.h getlyr3.h
+fileops.obj: fileops.c fileops.h
+id3v1.obj: id3v1.c id3v1.h
+id3v2.obj: id3v2.c fileops.h id3v2.h
 
 ############################################################################
