--- a/makefile.dj
+++ b/makefile.dj
@@ -18,13 +18,9 @@ clean:
 	del id3
 	del id3.exe
 
-zip:
-	del distrib.zip
-	pkzip -ex -P distrib * debian/* FreeBSD/*
-
 ############################################################################
 
-id3.exe: main.o varexp.o fileexp.o sedit.o mass_tag.o pattern.o \
+id3.exe: main.o varexp.o fileexp.o sedit.o mass_tag.o pattern.o dumptag.o \
 	 setid3.o getid3.o id3v1.o \
 	 setid3v2.o getid3v2.o id3v2.o fileops.o \
 	 setlyr3.o getlyr3.o lyrics3.o \
@@ -43,27 +39,34 @@ main.o:
 ## dependencies -MM ########################################################
 
 main.o: main.cpp setgroup.h set_base.h sedit.h charconv.h setid3.h \
-  setfname.h setquery.h setid3v2.h setlyr3.h mass_tag.h fileexp.h \
-  pattern.h
+ setfname.h setquery.h setid3v2.h setlyr3.h mass_tag.h fileexp.h \
+ pattern.h dumptag.h
 sedit.o: sedit.cpp sedit.h charconv.h
 varexp.o: varexp.cpp varexp.h
 fileexp.o: fileexp.cpp varexp.h auto_dir.h fileexp.h
 mass_tag.o: mass_tag.cpp charconv.h sedit.h set_base.h mass_tag.h \
-  fileexp.h
+ fileexp.h
 pattern.o: pattern.cpp set_base.h sedit.h charconv.h mass_tag.h fileexp.h \
-  pattern.h
+ pattern.h
+dumptag.o: dumptag.cpp dumptag.h set_base.h sedit.h charconv.h setgroup.h
 charconv.o: charconv.cpp charconv.h
 char_ucs.o: char_ucs.cpp char_ucs.h charconv.h
+char_utf8.o: char_utf8.cpp utf8.h char_utf8.h charconv.h
+lyrics3.o: lyrics3.cpp lyrics3.h
 setid3.o: setid3.cpp id3v1.h getid3.h set_base.h sedit.h charconv.h \
-  setid3.h
+ setid3.h
 setid3v2.o: setid3v2.cpp char_ucs.h charconv.h id3v1.h id3v2.h fileops.h \
-  getid3v2.h set_base.h sedit.h setid3v2.h
+ getid3v2.h set_base.h sedit.h setid3v2.h
+setlyr3.o: setlyr3.cpp charconv.h lyrics3.h getlyr3.h getid3.h set_base.h \
+ sedit.h id3v1.h setlyr3.h
 setfname.o: setfname.cpp sedit.h charconv.h setfname.h setgroup.h \
-  set_base.h
+ set_base.h
 setquery.o: setquery.cpp setquery.h set_base.h sedit.h charconv.h
 getid3.o: getid3.cpp getid3.h set_base.h sedit.h charconv.h id3v1.h
-getid3v2.o: getid3v2.cpp char_ucs.h charconv.h id3v2.h getid3v2.h \
-  set_base.h sedit.h
+getid3v2.o: getid3v2.cpp char_ucs.h charconv.h char_utf8.h id3v2.h \
+ getid3v2.h set_base.h sedit.h
+getlyr3.o: getlyr3.cpp lyrics3.h getid3.h set_base.h sedit.h charconv.h \
+ id3v1.h getlyr3.h
 fileops.o: fileops.c fileops.h
 id3v1.o: id3v1.c id3v1.h
 id3v2.o: id3v2.c fileops.h id3v2.h
