- remove README.md, which is no longer needed - edit yml configuration - change download links in html

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: id3
+title: id3mtag
 description: a portable command-line mass tagger
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-slate
+
+zip_url: "#getting-it"
+tar_url: "#getting-it"
 
 gems:
   - jekyll-mentions
